--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="profil-card-info">
         <div>
           <div class="first">23</div>
-          <div class="second">Umur</div>
+          <div class="second">Age</div>
         </div>
         <div>
           <div class="first">4</div>
